<resources>
    <string name="app_name">Camcha</string>

    <!-- MainActivity -->
    <string name="detection_start">탐지</string>
    <string name="show_map">지도</string>

    <!-- DetectionResult -->
    <string name="gps_plz">
        보다 안전한 사회를 만들기 위해 Camcha는 사용자 위치정보를 포함한 탐지기록을 수집하고자 합니다.\n
        탐지 전에 GPS 정보 수집에 동의해주세요."
    </string>
    <string name="gps_setting_on_plz">
        "동의하시면 나타나는 설정 창에서 위치기능을 켜주시기 바랍니다."
    </string>
    <string name="agree">좋아요</string>
    <string name="disagree">좆까요</string>

    <!-- Report -->
    <string name="report_how">어떻게 신고하시겠습니까?</string>
    <string name="report_by_call">전화</string>
    <string name="report_by_message">문자메시지</string>
    <string name="description_camcha">
        "Camcha 앱의 자체 포맷을 통해 탐지스냅샷이나 정확한 위치정보 등을 포함하여 손쉽게 신고합니다."
    </string>
    <string name="description_call">
        "직접 관할부처로 전화를 걸어 상황을 설명합니다."
    </string>
    <string name="description_message">
        "직접 관할부처에 문자메시지를 작성하여 전송합니다."
    </string>
    <string name="report_where">어디로 신고하시겠습니까?</string>
    <string name="number_1366">1366</string>
    <string name="number_117">117</string>
    <string name="number_112">112</string>
    <string name="description_1366">
        "[여성긴급전화] “위기에 처한 여성에게 1년 365일에 하루를 더하여 충분하고 즉각적인 서비스를 제공한다.”는 의미로 여성인권 향상을 위해 연중 24시간 운영되는 여성긴급전화입니다."
    </string>
    <string name="description_117">
        "[안전 Dream] 아동, 여성, 장애인 경찰지원센터로 성폭력 관련 신고/상담을 포함하여 약자에 대한 업무를 총괄하는 기관입니다."
    </string>
    <string name="description_112">
        "[경찰 범죄신고] 성/가정폭력신고, 사이버범죄신고 등 여러 범죄에 대한 신고가 가능한 번호입니다."
    </string>
</resources>
