<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22dp"
        android:text="@string/report_where"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:background="@drawable/box_circular"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_1366"
            android:textSize="20dp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_1366"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:background="@drawable/box_circular_yellow"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_117"
            android:textSize="20dp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_117"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:background="@drawable/box_circular_blue"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_112"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_gravity="top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_112"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
