<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/gps_plz"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center|center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/icon_gps"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps_plz"
            android:textSize="17dp"
            android:lineSpacingMultiplier="1.3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps_setting_on_plz"
            android:textSize="17dp"
            android:textColor="#e66"
            android:lineSpacingMultiplier="1.3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_circular_green"
                android:text="@string/agree"
                android:layout_marginRight="10dp"
                android:id="@+id/gps_plz_agree_button"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_circular_red"
                android:text="@string/disagree"
                android:layout_marginLeft="10dp"
                android:id="@+id/gps_plz_disagree_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
